--- a/package/crds/cloudplatform.gcp.upbound.io_projects.yaml
+++ b/package/crds/cloudplatform.gcp.upbound.io_projects.yaml
@@ -91,7 +91,7 @@ spec:
                   deletionPolicy:
                     description: |-
                       The deletion policy for the Project. Setting ABANDON allows the resource
-                      to be abandoned rather than deleted, i.e. Possible values are: "PREVENT", "ABANDON", "DELETE". Default value is DELETE.
+                      to be abandoned rather than deleted, i.e. Possible values are: "PREVENT", "ABANDON", "DELETE". Default value is PREVENT.
                     type: string
                   folderId:
                     description: |-
@@ -203,13 +203,20 @@ spec:
                     description: The project ID. Changing this forces a new project
                       to be created.
                     type: string
-                  skipDelete:
-                    description: |-
-                      skip_delete is deprecated and will be
-                      removed in 6.0.0. Please use deletion_policy instead. A skip_delete value of false
-                      can be changed to a deletion_policy value of DELETE and a skip_delete value of true
-                      to a deletion_policy value of ABANDON for equivalent behavior.
-                    type: boolean
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: A map of resource manager tags. Resource manager
+                      tag keys and values have the same definition as resource manager
+                      tags. Keys must be in the format tagKeys/{tag_key_id}, and values
+                      are in the format tagValues/456. The field is ignored when empty.
+                      The field is immutable and causes resource replacement when
+                      mutated. This field is only set at create time and modifying
+                      this field after creation will trigger recreation. To apply
+                      tags to an existing resource, see the google_tags_tag_value
+                      resource.
+                    type: object
+                    x-kubernetes-map-type: granular
                 type: object
               initProvider:
                 description: |-
@@ -242,7 +249,7 @@ spec:
                   deletionPolicy:
                     description: |-
                       The deletion policy for the Project. Setting ABANDON allows the resource
-                      to be abandoned rather than deleted, i.e. Possible values are: "PREVENT", "ABANDON", "DELETE". Default value is DELETE.
+                      to be abandoned rather than deleted, i.e. Possible values are: "PREVENT", "ABANDON", "DELETE". Default value is PREVENT.
                     type: string
                   folderId:
                     description: |-
@@ -354,13 +361,20 @@ spec:
                     description: The project ID. Changing this forces a new project
                       to be created.
                     type: string
-                  skipDelete:
-                    description: |-
-                      skip_delete is deprecated and will be
-                      removed in 6.0.0. Please use deletion_policy instead. A skip_delete value of false
-                      can be changed to a deletion_policy value of DELETE and a skip_delete value of true
-                      to a deletion_policy value of ABANDON for equivalent behavior.
-                    type: boolean
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: A map of resource manager tags. Resource manager
+                      tag keys and values have the same definition as resource manager
+                      tags. Keys must be in the format tagKeys/{tag_key_id}, and values
+                      are in the format tagValues/456. The field is ignored when empty.
+                      The field is immutable and causes resource replacement when
+                      mutated. This field is only set at create time and modifying
+                      this field after creation will trigger recreation. To apply
+                      tags to an existing resource, see the google_tags_tag_value
+                      resource.
+                    type: object
+                    x-kubernetes-map-type: granular
                 type: object
               managementPolicies:
                 default:
@@ -561,7 +575,7 @@ spec:
                   deletionPolicy:
                     description: |-
                       The deletion policy for the Project. Setting ABANDON allows the resource
-                      to be abandoned rather than deleted, i.e. Possible values are: "PREVENT", "ABANDON", "DELETE". Default value is DELETE.
+                      to be abandoned rather than deleted, i.e. Possible values are: "PREVENT", "ABANDON", "DELETE". Default value is PREVENT.
                     type: string
                   effectiveLabels:
                     additionalProperties:
@@ -608,13 +622,20 @@ spec:
                     description: The project ID. Changing this forces a new project
                       to be created.
                     type: string
-                  skipDelete:
-                    description: |-
-                      skip_delete is deprecated and will be
-                      removed in 6.0.0. Please use deletion_policy instead. A skip_delete value of false
-                      can be changed to a deletion_policy value of DELETE and a skip_delete value of true
-                      to a deletion_policy value of ABANDON for equivalent behavior.
-                    type: boolean
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: A map of resource manager tags. Resource manager
+                      tag keys and values have the same definition as resource manager
+                      tags. Keys must be in the format tagKeys/{tag_key_id}, and values
+                      are in the format tagValues/456. The field is ignored when empty.
+                      The field is immutable and causes resource replacement when
+                      mutated. This field is only set at create time and modifying
+                      this field after creation will trigger recreation. To apply
+                      tags to an existing resource, see the google_tags_tag_value
+                      resource.
+                    type: object
+                    x-kubernetes-map-type: granular
                   terraformLabels:
                     additionalProperties:
                       type: string
